--- a/OnlineCabBookingApplication/src/main/resources/application.properties
+++ b/OnlineCabBookingApplication/src/main/resources/application.properties
@@ -1,13 +1,14 @@
-
-#changing the server port
-server.port=8181
+server.port=8080
 
 #db specific properties
-spring.datasource.url=jdbc:mysql://localhost:3306/cabservice
+spring.datasource.url=jdbc:mysql://localhost:3306/mellowcabs
+
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=jasmin@24
+spring.datasource.password=jasmin24
 
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
